<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_settings">Settings</string>
    <string name="productname">ProductName</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="image">Image</string>
    <string name="select_image">Select Image</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="order_email">Order Email</string>
    <string name="order_phone">Order Phone</string>
    <string name="Sale">sale</string>
    <string name="empty">press the + button then complete the fields</string>
</resources>
