<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mahmoud.inventoryapp.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detailsProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productname"

            />

        <EditText
            android:id="@+id/EditProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/detailsPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/price" />

        <EditText
            android:id="@+id/EditPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/detailsQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/EditQuantity"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <Button
                android:id="@+id/increment"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:text="++" />

            <Button
                android:id="@+id/decrement"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:text="--" />
        </LinearLayout>

        <TextView
            android:id="@+id/detailsSupplierName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name" />

        <EditText
            android:id="@+id/EditSupplierName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailsSupplierPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone" />

        <EditText
            android:id="@+id/EditSupplierPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/detailsSupplierEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_email" />

        <EditText
            android:id="@+id/EditSupplierEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detailsSupplierImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image" />

        <ImageView
            android:id="@+id/detailsImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/detailsButtonImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/detailsButtonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/detailsButtonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/delete" />

            <Button
                android:id="@+id/detailsButtonOrderEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/order_email" />

            <Button
                android:id="@+id/detailsButtonOrderPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/order_phone" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
